gccida/c3/expunge_block
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expunge_block/src/cfg.c:753:12: error: expected expression
*( _OWORD *)&b->aux = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expunge_block/src/cfg.c:753:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&b->aux = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expunge_block/src/cfg.c:754:12: error: expected expression
*( _OWORD *)&b->count = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expunge_block/src/cfg.c:754:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&b->count = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expunge_block/src/cfg.c:755:12: error: expected expression
*( _OWORD *)&b->global_live_at_start = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expunge_block/src/cfg.c:755:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&b->global_live_at_start = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expunge_block/src/cfg.c:756:12: error: expected expression
*( _OWORD *)&b->local_set = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expunge_block/src/cfg.c:756:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&b->local_set = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expunge_block/src/cfg.c:757:12: error: expected expression
*( _OWORD *)&b->pred = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expunge_block/src/cfg.c:757:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&b->pred = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expunge_block/src/cfg.c:758:12: error: expected expression
*( _OWORD *)&b->head_tree = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expunge_block/src/cfg.c:758:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&b->head_tree = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expunge_block/src/cfg.c:759:12: error: expected expression
*( _OWORD *)&b->head = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expunge_block/src/cfg.c:759:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&b->head = 0LL; 
   ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expunge_block/src/obj/cfg.o] Error 1
